# crew

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.tickets/: c-0461.md  c-08dd.md  c-0a1f.md  c-1acb.md  c-1f7f.md  c-1fdf.md  c-2186.md  c-2716.md  c-28f3.md  c-2d23.md  c-2efe.md  c-3145.md  c-31cd.md  c-324c.md  c-33b5.md  c-344c.md  c-37c2.md  c-38f4.md  c-3c12.md  c-3d7e.md  c-43b4.md  c-4557.md  c-49b9.md  c-4b71.md  c-4e68.md  c-54c2.md  c-5790.md  c-5895.md  c-5c1b.md  c-64b7.md  c-6b15.md  c-6b2f.md  c-6b57.md  c-7189.md  c-75bb.md  c-7c4e.md  c-867c.md  c-8ca6.md  c-9011.md  c-9026.md  (+22 more)
crew/: __init__.py  __main__.py  agent.py  cli.py  crew_logging.py  display.py  git.py  pid.py  runner.py  state.py  stuck_detection.py  tui.py
crew/templates/: agent_claude.md
docs/: AGENT_STATE_MACHINE.md
scripts/: plan-haiku-summary.sh  plan-tui.sh
tests/: __init__.py  conftest.py  test_agent.py  test_cli.py  test_crew_logging.py  test_pid.py  test_runner.py  test_session_recovery.py  test_state.py  test_stuck_detection.py
tests/e2e/: __init__.py  test_full_workflow.py
tests/fault_injection/: __init__.py  invariants.py  snapshots.py  test_assign.py  test_complete.py  test_properties.py  test_recovery.py  test_step.py
tests/fixtures/: __init__.py  fake_claude.py  mock_claude.py
tests/fixtures/responses/: default.json  quick_done_step0.json  step0.json  step1.json  step2.json
tests/fixtures/sample_project/: README.md  generate_tickets.py  pyproject.toml  sample.py
tests/fixtures/sample_project/.tickets/: t-0001.md  t-0002.md  t-0003.md  t-0004.md  (+1 more)
