[project]
name = "crew"
version = "0.1.0"
description = "Multi-agent orchestrator for Claude Code"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "prompt_toolkit>=3.0.0",
    "rich>=13.0.0",
]

[project.scripts]
crew = "crew.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
